# sass-app

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
CoursePlatform/: Dockerfile  entrypoint.sh  gitlab_deploy_key  gitlab_deploy_key.pub  manage.py  requirements.txt
CoursePlatform/apps/CoursePlatform/: asgi.py  settings.py  urls.py  wsgi.py
CoursePlatform/apps/course/: admin.py  models.py  urls.py  views.py
CoursePlatform/apps/course/migrations/: 0001_initial.py
CoursePlatform/apps/course/templates/: course_detail.html  course_list.html
CoursePlatform/apps/payment/: urls.py  views.py
CoursePlatform/apps/payment/templates/: esewa.html
CoursePlatform/apps/user/: forms.py  urls.py  views.py
CoursePlatform/apps/user/templates/: base.html
CoursePlatform/apps/user/templates/registration/: login.html  register.html
CoursePlatform/static/css/: login.css
