[project]
name = "sass-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cookiecutter>=2.7.1",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-tailwind[reload]>=4.5.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "stripe>=15.3.0",
]
